<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ExercisePackage">


    <TextView
        android:id="@+id/mg_tv1"
        android:layout_width="382dp"
        android:layout_height="54dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="19dp"
        android:layout_marginTop="20dp"
        android:background="@android:color/background_light"
        android:text="Value"
        android:textColor="@color/black"
        android:textSize="30sp" />


    <TextView
        android:id="@+id/mg_tv2"
        android:layout_width="313dp"
        android:layout_height="34dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="59dp"
        android:layout_marginTop="73dp"
        android:background="@android:color/background_light"
        android:text="Value2"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <TableLayout
        android:layout_width="191dp"
        android:layout_height="313dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="19dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="118dp"
        android:background="@android:color/white">
        <!---Table heading-->
        <TableRow android:background="@color/teal_700">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:gravity="center"
                android:padding="10sp"
                android:text="@string/col1"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:gravity="center"
                android:padding="10sp"
                android:text="@string/col2"
                android:textColor="@color/white"
                android:textSize="14sp" />



        </TableRow>


        <TableRow>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:gravity="center_horizontal"
                android:padding="10sp"
                android:text="@string/row1"
                android:textSize="12sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:gravity="center_horizontal"
                android:padding="10sp"
                android:text="@string/row2"
                android:textSize="12sp" />



        </TableRow>


        <TableRow>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:gravity="center_horizontal"
                android:padding="10sp"
                android:text="@string/row1"
                android:textSize="12sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:gravity="center_horizontal"
                android:padding="10sp"
                android:text="@string/row2"
                android:textSize="12sp" />




        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:gravity="center_horizontal"
                android:padding="10sp"
                android:text="@string/row1"
                android:textSize="12sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:gravity="center_horizontal"
                android:padding="10sp"
                android:text="@string/row2"
                android:textSize="12sp" />




        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:gravity="center_horizontal"
                android:padding="10sp"
                android:text="@string/row1"
                android:textSize="12sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:gravity="center_horizontal"
                android:padding="10sp"
                android:text="@string/row2"
                android:textSize="12sp" />




        </TableRow>

    </TableLayout>

    <Button
        android:id="@+id/NutritionBtn"
        android:layout_width="153dp"
        android:layout_height="59dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:background="@color/black"
        android:text="@string/Nutrition"
        app:backgroundTint="@color/black"
        />

    <Button
        android:id="@+id/supplementBtn"
        android:layout_width="159dp"
        android:layout_height="61dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="254dp"
        android:layout_marginBottom="0dp"
        android:background="@color/black"
        android:text="@string/Supplement"
        app:backgroundTint="@color/black" />

    <Button
        android:id="@+id/WorkOutBtn"
        android:layout_width="124dp"
        android:layout_height="61dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="143dp"
        android:layout_marginBottom="1dp"
        android:background="@android:color/holo_orange_dark"
        android:text="@string/WorkOuts"
        app:backgroundTint="@android:color/holo_orange_dark" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="115dp"
        android:layout_height="64dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="296dp"
        android:layout_marginBottom="419dp"
        app:srcCompat="@drawable/i1" />

</RelativeLayout>

